style.css
/* ... */
/************************************************************************* SCROLL TO TOP BUTTON *********************************************************************/

#upButton{
    height:50px;
    width:50px;
    position:fixed;
    z-index:2;
    bottom:100px;
    right:100px;
    opacity:0.9;
}

#upButton:hover{
    cursor: pointer;
    opacity:1;
}

#upButton:active{
    opacity:1;
    transform: scale(1.3);
    -webkit-transform:scale(1.3);
}

/************************************************************************* HEADER **************************************************************/

header{
    height:100vh;
    /* overflow:auto; */
    background: rgb(81,219,255);
    background: radial-gradient(circle, rgba(81,219,255,0.3533614129245448) 0%, rgba(73,205,232,1) 100%);
}

/******************************** LINKS (all) AT TOP OF THE HEADER  */

#topPageLinks{
    display: flex;
    justify-content: space-around;
    margin-bottom:30px;
}

/********************************** HEADER: MAIN LINKS */
#mainLinks{
    display:flex;
    width:50%;
    justify-content: space-around;
    margin:auto;
}

#mainLinks a{
    text-decoration: none;
}

nav a:hover{
    color:rgb(4,139,154);
}

#kucra{
    padding-left:100px;
    margin:0;
    font-size:1em;
    font-weight:600;
}

#kucra a:hover{
    color:rgb(4,139,154);
}

#kucra a{
    text-decoration: none;
}

/************************************* HEADER: SOCIAL MEDIA LINKS */
.headerI{
    margin:auto;
    color:white;
    width:50%;
}

ul{
    display: flex;
    justify-content: space-around;
    width: 150px;
    padding-right:40px;
    margin-top: auto;
    margin-bottom: auto;
}

a .headerI:hover{
    color:rgb(4,139,154);
}

li{
    list-style-type: none;
}

/********************************************** IMAGE */
img{
    width:40%;
    position:relative;
    right:100px;
}

/********************************************* ARTICLE */

#wrapperHeaderArticle article{
    left:100px;
    top:50px;
}

#wrapperHeaderArticle{
    display: flex;
    justify-content: space-around;
    padding-top:70px;
}

h2{
    font-weight: 700;
    font-size: 3em;
    margin-bottom: 20px;
    margin-top:50px;
}


/************************************** FORM & SUBMIT BUTTON*/
#form{
    position:absolute;
    margin-top: 20px;
}

#email{
    position :relative;
    z-index:1;
    width:340px;
    height:45px;
    border-radius:30px;
    border:none;
    padding-left:20px;
    font-size:16px;
    font-weight:200;
}

#submitButton{
    position:relative;
    z-index: 2;
    left: 232px;
    top:-46px;
    height: 40px;
    width: 120px;
    border-radius: 20px;
    background-color:rgb(4,139,154);
    border:0;
    font-size:1em;
    font-weight:300;
    margin:3px;
    color:white;
}

#submitButton:hover{
    cursor:pointer;
    font-weight:500;
}

#submitButton:active{
   background-color: rgb(1, 202, 224);
   transform: scale(1.3);
   -webkit-transform:scale(1.3);
}

/* ************************************************************FEATURES****************************************************************** */

#featuresContainer{
    display:flex;
    justify-content:center;
    gap:20px;
    height:300px;
    padding-bottom: 200px;
}


#intro{
    color:grey;
    margin:0px;
}

.featuresArticle{
    background: rgb(81,219,255);
    background: radial-gradient(circle, rgba(81,219,255,0.3533614129245448) 0%, rgba(73,205,232,1) 100%);
    width:300px;
    height:100%;
    border-radius:10px;
    display:flex;
    flex-direction: column;
    text-align: center;
    margin-top: 60px;
    padding:20px;
}

 .featuresParagraphs{
    font-weight: 300;
    text-align: center;
}

.featuresH3Title{
    font-size:24px;
    font-weight: 300;
    margin-top:0px;
    margin-bottom:0px;
}
#chest,#brush,#globe{
    width:50px;
    height:50px;
    margin:auto;
}

.text{
    padding-bottom:50px;
}

/* ******************************************************** SECTION TEAM************************************************************* */

/************************************************** GENERAL */
#teamWrapper{
    background-color: white;
}

#teamContainer{
    display:flex;
    justify-content: center;
    margin-bottom:100px;
}

.teamMember{
    margin-top:50px;
    width:15%;
    position:relative;
    margin:50px 25px 50px 25px;
}

.teamMember,#teamWrapper p{
    text-align: center;
}

/********************************************* PARAGRAPH (light grey sentence)*/

#teamWrapper p{
    margin-bottom: 0px;
    margin-top: 0px;
}

/********************************************** RESULT NUMBERS */
.result{
    font-size:18px;
}
/********************************************** IMAGE */

#teamWrapper img{
    width: 150px;
    border-radius: 100px;
    filter:grayscale(100%);
    margin-top: 30px;
  }
/********************************************** TEAM MEMBERS NAMES */

.name{
    font-size:14px;
}

/**********************************************TEAM MEMBER SOCIAL MEDIAS */

.teamMemberSocialMedias{
    position:absolute;
    top: 230px;
    left: 90px;
}

.teamMemberSocialMedias a{
    display: none;
    margin-left:10px;
    margin-right:10px;
    color:rgb(23, 189, 222)
    }

/* ********************************************* HOVER */
/* SOCIAL MEDIAS LINKS APPEAR WHEN HOVERING */
.teamMember:hover a{
    display: inline;
    cursor:pointer;
}
/* TEAM MEMBER PICTURE AND INFO SIZE UP */
.teamMember:hover {
    transform: scale(1.3);
    -webkit-transform:scale(1.3);
}
/* TEAM MEMBER PICTURE GOES FROM GRAYSCALE TO COLORS */
#teamWrapper img:hover{
    filter:none;
}
   
/****************************************************** PARALLAX ***********************************************************/

/************************GENERAL*/

#parallaxWrapper{
    display: flex;
    justify-content: center;
    padding-top:50px;
    padding-bottom: 50px;
}
/* ... */

